--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "gsap": "^3.12.5",
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.1",
+    "locomotive-scroll": "^5.0.1",
     "lucide-react": "^0.399.0",
     "moment": "^2.30.1",
     "next": "14.2.4",
@@ -42,6 +43,7 @@
     "react-date-range": "^2.0.1",
     "react-dom": "^18.3.1",
     "react-email": "^3.0.1",
+    "react-fast-marquee": "^1.6.5",
     "react-hook-form": "^7.52.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.1",
